test(price-api): add unit tests for latest best aggregated price API and refactor some code